2008-10-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/carrier_expert.dox: start tutorial on creating carriers.

	* example/carrier/main.cpp: add example of creating a trivial
	new carrier.

2008-10-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/Carrier.h: simplify
	inheritance tree for Carrier class by removing unused dependency
	on ShiftStream.  This is part of a documentation clean up.

2008-10-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/ThreadImpl.cpp: add setPriority/getPriority
	functions (they just map onto ACE's implementation).

	* src/libYARP_OS/src/Thread.cpp: fix for bug
	2168847 ("Thread::onStop() problem").  Thanks to Alexandre
	Bernardino for reporting this.

2008-10-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/rand/rand.cpp: correct out-of-date example (Rand was
	moved from namespace yarp::sig to yarp::math).

	* scripts/compile-examples: update dumb test script to make sure
	the examples all still compile.

	* example/dev/FakeFrameGrabber2.h: add some missing functions
	that were added to a base class.

	* src/libYARP_OS/src/Run.cpp: move from use of String to
	ConstString.

	* src/libYARP_OS/include/yarp/os/Run.h: remove use of
	(ACE-dependent) String class in a header file that should be free
	of ACE dependencies.

	* src/libYARP_sig/src/Matrix.cpp: fix fault detection on
	read/write

2008-10-10 Alessandro Scalzo <alessandro@liralab.it>
	* yarp2/src/libYARP_OS/src/Run.cpp
	* yarp2/src/libYARP_OS/include/yarp/os/Run.h
	Messages added, --report command added,
	--workdir <working directory> running option
	added.

2008-10-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/cmd_yarp.dox: document that "yarp name gc" is
	deprecated, and encourage use of "yarp clean" instead.

2008-10-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/name_server.dox: small update to yarp namespace
	documentation.
