@@ -1,3 +1,8 @@
+2008-10-24  Lorenzo Natale <nat@liralab.it>
+
+	* src/YARP_dev/include/yarp/dev/Attachable.h: new interface for an attachable device
+	* src/YARP_dev/include/yarp/dev/CartesianControl.h: new interface for a cartesian controller
+
 2008-10-21  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/doc/carrier_expert.dox: start tutorial on creating carriers.
